<resources>
    <string name="app_name">Nasema Nawe</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="greetings">Greetings</string>
    <string name="food">Food</string>
    <string name="washroom">Washroom</string>
    <string name="drink">Drink</string>
    <string name="clothing">Clothing</string>
    <string name="comfort">Comfort</string>
    <string name="conversation">Conversation</string>
    <string name="words">Words</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="Food">Food</string>
    <string name="medical">Medical</string>
    <string name="createCategory">Create New Category</string>
</resources>
